<resources>
    <string name="app_name">TempConverter</string>
    <string name="instruction">1. Enter your temperature to convert. 2. Select desired temperature scale. 3. Hit Calculate!</string>
    <color name="myColor">#FFE4E1</color>
    <string name="celsius">To Celsius</string>
    <string name="fahrenheit">To Fahrenheit</string>
    <string name="calc">Calculate</string>#FFE4E1

</resources>